@@ -7617,4 +7617,5 @@ EPRINTS-3.1-beta-2
 2008-07-10 tdb
  * Added default account for CrossRef imports, fixing #3397
  * Check for an XML "unresolved" response from CrossRef, fixing #3386
+ * Added get_primary_key method to Database to fix #3396
 
